--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,34 @@
 body {
-font-family:"Poppins";
+font-family:'Poppins';
+padding:0;
+Margin:0;
 }
+.Container {
+  width:90%;
+  margin: 0 auto;
+}
+.flexiable-container{
+  display:flex;
+}
+.half-width{
+  width:50%;
+  padding:0 5%;
+}
+/* Welcome section css */
+.Welcome-Section{
+  background-image: url(images/top-banner.png);
+  background-repeat:no-repeat;
+  padding:30px 0;
+}
+.right-side img {
+  width:100%;
+}
+/* Dream section */
+.Dream-big{
+  background-image: url(images/dream-bg.png);
+  background-repeat:no-repeat;
+  background-position:right;
+  padding:30px 0;
+}
+
+
